clean up old log files

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -16,9 +16,9 @@
 		</ul>
                 <p class="page-header"><strong>Instructions:</strong></p>
                 <ul>
-                    <li>To run the BOT: go to &quot;Run ADVCP Bot&quot; select bot options from dropdowns and click on &quot;Run Bot&quot; - an email with the results will be sent to the recipient.</li>
+                    <li>To run the BOT: go to <span class="bg-info"><code>Run ADVCP Bot</code></span> select bot options from dropdowns and click on &quot;Run Bot&quot; - an email with the results will be sent to the recipient.</li>
                     <li>You can choose to upload a (.csv) feed via the UI or choose `database` as the source for the Bot. (under Data Source)</li>
-                    <li> Reports archive is under the `Reports` tab</li>
+                    <li> Reports archive is under the <span class="bg-info"><code>Reports</code></span> tab</li>
                 </ul>
                
                 <p class="page-header"><a id="techBtn" class="btn btn-default">Technical</a></p>
