jobs and datatables

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -13,6 +13,7 @@
 			<li>500 Errors</li>
                         <li>X-Frame-Options</li>
 			<li>Facebook Instant Articles</li>
+                        <li>reCAPTCHA</li>
 		</ul>
                 <p class="page-header"><strong>Instructions:</strong></p>
                 <ul>
