--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,6 +20,8 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <!-- dt -->
+    <link href="/css/jquery.dataTables.min.css" rel="stylesheet">
     <style type="text/css">
         #upstatus, #email-error {
             padding: 6px 6px;
@@ -56,6 +58,9 @@
                         </li>
                         <li>
                             <a href="/reports"><i class="fa fa-fw fa-calendar"></i> Reports</a>
+                        </li>
+                        <li>
+                            <a href="/jobs"><i class="fa fa-fw fa-calendar"></i> Jobs</a>
                         </li>
                         <li>
                             <a href="/"><i class="fa fa-fw fa-calendar"></i> Home</a>
