--- a/views/pages/jobs.ejs
+++ b/views/pages/jobs.ejs
@@ -21,12 +21,14 @@
                                     </thead>
                                     <tbody>
                                     <% jobs.forEach(function(job) { %>
+                                    <% if(job.violations.indexOf('Error Type') === -1) { %>
         				<tr>
                                             <td><%= job.job_id %></td>
                                             <td><%= job.violations %></td>
-                                            <td><% if(job.url) { %><%= job.url.substring(0,40) %> ... <%= job.url.substring(job.url.length-40, job.url.length) %><% } else { %>N.A<% } %></td>
+                                            <td><% if(job.url) { %><%= job.url.split('/').reverse()[0] %><% } else { %>N.A<% } %></td>
                                             <td><%= job.completed_at %></td>
                                         </tr>
+                                    <% } %>
                                     <% }); %>
                                     </tbody>
                                     </table>
