--- a/views/pages/jobs.ejs
+++ b/views/pages/jobs.ejs
@@ -1,12 +1,12 @@
 <% include ../partials/header %>
 
 <!-- content area -->
-		<div class="row">
+		
 			<div id="list" class="col-lg-12">
 			<h1 class="page-header">
                             <small>Jobs</small>
                         </h1>
-				<ul>
+				
                                     <% if(jobs.length === 0) { %>
                                     <h5>No Jobs Found<h5>
                                     <% } else { %>
@@ -25,7 +25,7 @@
         				<tr>
                                             <td><%= job.job_id %></td>
                                             <td><%= job.violations %></td>
-                                            <td><% if(job.url) { %><a target="_blank" href="<%= job.url %>"><%= job.url.split('/').reverse()[0] %></a><% } else { %>N.A<% } %></td>
+                                            <td><% if(job.url) { %><a target="_blank" href="<%= job.url %>"><%= job.url.split('/').reverse()[0].substring(0,60) %>...</a><% } else { %>N.A<% } %></td>
                                             <td><%= job.completed_at %></td>
                                         </tr>
                                     <% } %>
@@ -33,7 +33,7 @@
                                     </tbody>
                                     </table>
                                     <% } %>
-				</ul>
+			
 			</div>
-		</div>
+		
 <% include ../partials/footer %>
