--- a/views/pages/reports.ejs
+++ b/views/pages/reports.ejs
@@ -1,20 +1,34 @@
 <% include ../partials/header %>
 
 <!-- content area -->
-		<div class="row">
 			<div id="list" class="col-lg-12">
 			<h1 class="page-header">
                             <small>Reports</small>
                         </h1>
-				<ul>
-                                    <% if(files.length === 0) { %>
-                                    <h5>No Reports Found<h5>
+                                <% if(files.length === 0) { %>
+                                    <h5>No reports Found<h5>
                                     <% } else { %>
+                                    <table id="reports" style="font-weight: 400; font-size: 14px" class="display" cellspacing="0" width="100%">
+                                    <thead>
+                                        <tr>
+                                            <th>JobID</th>
+                                            <th>Date</th>
+                                            <th>File</th>
+                                            <th>View</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
                                     <% files.forEach(function(file) { %>
-        				<li><a href="<%= cdn_host %><%= file %>"> <%= file.replace('logs/',''); %></a></li>
+                                        <tr>
+                                            <td><%= file.split("_")[1].replace(".csv","") %></td>
+                                            <td><%= file.split("_")[0].split("/")[1] %></td>
+                                            <td><%= file.replace("logs/","") %></td>
+                                            <td><a target="_blank" class="btn btn-sm btn-primary" href="<%= cdn_host %><%= file %>">View</a></td>
+                                        </tr>
                                     <% }); %>
+                                    </tbody>
+                                    </table>
                                     <% } %>
-				</ul>
 			</div>
-		</div>
+                                
 <% include ../partials/footer %>
