--- a/views/pages/run.ejs
+++ b/views/pages/run.ejs
@@ -55,8 +55,18 @@
     					<% }); %>
                                         </select>
                                     </div>
+                                </div><br/>
+                                <div class="row">
+                                    <div class="col-md-5"><div class="form-group">&nbsp;</div></div>
+                                    <div class="col-md-7">
+                                        <label style="font-weight: 400" for="src">Proxy Servers</label>
+                                        <select class="form-control" name="proxies" id="proxies" multiple="multiple">
+                                        <% Object.keys(proxy).forEach(function(p) { %>
+                                            <option <% if(proxy[p].indexOf('Localhost') !== -1) { %>selected="selected"<% } %> value="<%= p %>"><%= proxy[p] %></option>
+    					<% }); %>
+                                        </select><br/><br/>
+                                    </div>
                                 </div>
-                                <br/>
                                 <div class="row">
                                 <div class="col-lg-12">
                                     <div style="display:none" class="form-group" id="uploadFormCont"><br/>
