--- a/views/pages/run.ejs
+++ b/views/pages/run.ejs
@@ -62,7 +62,7 @@
                                         <label style="font-weight: 400" for="src">Proxy Servers</label>
                                         <select class="form-control" name="proxies" id="proxies" multiple="multiple">
                                         <% Object.keys(proxy).forEach(function(p) { %>
-                                            <option <% if(proxy[p].indexOf('Localhost') !== -1) { %>selected="selected"<% } %> value="<%= p %>"><%= proxy[p] %></option>
+                                            <option <% if(proxy[p].indexOf('US/CA') !== -1) { %>selected="selected"<% } %> value="<%= p %>"><%= proxy[p] %></option>
     					<% }); %>
                                         </select><br/><br/>
                                     </div>
